backport: re PR c++/14763 (internal compiler error: in      find_function_data, at function.c:320)

Backport from gcc-3_4-branch
	2004-03-30  Mark Mitchell  <mark@codesourcery.com>
	            Jakub Jelinek  <jakub@redhat.com>
        PR c++/14763
	* pt.c (tsubst_default_argument): Clear
	current_function_decl.
	* decl2.c (mark_used): Don't segfault if cfun != NULL but
	current_function_decl == NULL.

From-SVN: r81395